# crew-agents

./: .gitignore  Makefile  README.md  dev-requirements.txt  requirements.txt  test_setup.py
common/: utils.py
job-application-md/: README.md  job_application_crew.py
job-application-md/config/: agents.yaml  tasks.yaml
job-application-pdf/: README.md  job_application_crew.py
job-application-pdf/config/: tasks.yaml
write_a_book_with_flows/src/write_a_book_with_flows/: main.py
write_a_technical_blog/: .gitignore  README.md  pyproject.toml  setup.py
write_a_technical_blog/src/write_a_technical_blog/: __init__.py  main.py  types.py
write_a_technical_blog/src/write_a_technical_blog/crews/blog_planning_crew/: blog_planning_crew.py
write_a_technical_blog/src/write_a_technical_blog/crews/blog_planning_crew/config/: agents.yaml  tasks.yaml
write_a_technical_blog/src/write_a_technical_blog/crews/blog_writing_crew/: blog_writing_crew.py
write_a_technical_blog/src/write_a_technical_blog/crews/blog_writing_crew/config/: agents.yaml  tasks.yaml
